# despesaCerta

./: .env  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml.example  pyproject.toml
alembic/: env.py
alembic/versions/: 1e313b3b983e_first_revsion.py
app/: main.py
app/api/v1/endpoints/: expense.py  user.py
app/core/: database.db  database.py
app/models/: model.py
app/utils/: initdb.py
bot/: runner.py
